# receive-bot

./: .env.example  .gitignore  Makefile  pyproject.toml
src/: config.py  dictionary.py  main.py
src/handlers/: commands.py  file_handlers.py
src/keyboards/: reply_factory.py
