[project]
name = "tbot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"